C4 diagrams added Fly.io config added Dockerfile included maven build/package